force-app/main/default/objects/Confirmed_Attendee__c/Confirmed_Attendee__c.object-meta.xml
<CustomObject>
    <label>Confirmed Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Confirmed Attendees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>