force-app/main/default/objects/Confirmed_Attendee__c/fields/Allowed_Seminars_del__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Seminars_del__c</fullName>
    <label>Allowed Seminars</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>