force-app/main/default/objects/Confirmed_Attendee__c/fields/Corporate_Seminar__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Seminar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Seminar</label>
    <referenceTo>Corporate_Seminar__c</referenceTo>
    <relationshipLabel>List of Confirmed Attendees</relationshipLabel>
    <relationshipName>Confirmed_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>