force-app/main/default/objects/Confirmed_Attendee__c/fields/Speaker_del__c.field-meta.xml
<CustomField>
    <fullName>Speaker_del__c</fullName>
    <label>Speaker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>